--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                    📜 <a href="https://srkibro.github.io/javascript-portfolio/"><h2>Srđan SrkiBro Cvetković</h2> - <h1>JavaScript Portfolio</h1></a>
                 </div>
                 <div class="col-sm-12 p-2">
-                    <blockquote>Srkibro Srđan Cvetković - JavaScript Portfolio frontend web aplikacija i igara koje sam ja kodirao su ovde izložene: Latinica u Ćirilicu, 
+                    <blockquote>Srđan Srkibro Cvetković JavaScript Portfolio frontend web aplikacija i igara koje sam ja kodirao su ovde izložene: Latinica u Ćirilicu, 
                         Biznis Kalkulator, Veličina Ekrana i Mačiji Kašalj.</blockquote>
                 </div>
             </div>
